[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "hammers"
version = "0.0.1"
authors = [{ name = "Chameleon Team", email = "help@chameleoncloud.org" }]
description = 'Bag of hammers to fix problems'
readme = "README.rst"
requires-python = ">=3.9"
classifiers = [
  'Development Status :: 4 - Beta',
  'Environment :: OpenStack',
  'Intended Audience :: System Administrators',
  'Topic :: Utilities',
]

dependencies = [
  "openstacksdk @ git+https://github.com/ChameleonCloud/openstacksdk@chameleoncloud/blazar",
  "oslo.config",
  "oslo.service",
  "oslo.log",
]


[project.urls]
Homepage = 'https://github.com/ChameleonCloud/hammers'

[project.optional-dependencies]
dev = [
  "ruff",
  "pytest",
  ]

[project.scripts]
periodic_inspector = "hammers.periodic_node_inspector:main"
